--- a/src/main/resources/templates/showBooks.html
+++ b/src/main/resources/templates/showBooks.html
@@ -4,7 +4,7 @@
     <title>Cities</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="webjars/salesforce-lightning-design-system/2.5.2/styles/salesforce-lightning-design-system.min.css" />
+    <link rel="stylesheet" type="text/css" href="/webjars/salesforce-lightning-design-system/2.5.2/styles/salesforce-lightning-design-system.min.css" />
 </head>
 
 <body>
@@ -13,13 +13,13 @@
 <header class="slds-global-header_container">
     <div class="slds-global-header slds-grid slds-grid--align-spread">
         <div class="slds-global-header__item">
-            <div class="slds-text-heading--large">Hello Spring Salesforce</div>
+            <div class="slds-text-heading--large">Hello Spring - Book example </div>
         </div>
     </div>
 </header>
 
 <div class="slds-container--center slds-container--medium" style="margin-top: 60px;">
-    <div class="slds-text-heading--medium">Salesforce Accounts</div>
+    <div class="slds-text-heading--medium">Books</div>
 
     <table class="slds-table slds-table--bordered slds-table--cell-buffer slds-table_striped">
         <thead>
@@ -30,6 +30,13 @@
             <th scope="col">
                 <div class="slds-truncate" title="Id">Name</div>
             </th>
+            <th scope="col">
+                <div class="slds-truncate" title="Id">Price</div>
+            </th>
+            <th scope="col">
+                <div class="slds-truncate" title="Id">ISBN</div>
+            </th>
+
         </tr>
         </thead>
         <tbody>
@@ -42,14 +49,23 @@
                 <td data-label="Name">
                     <div class="slds-truncate" th:title="${book.name}" th:text="${book.name}">Name</div>
                 </td>
+                <td data-label="Price">
+                    <div class="slds-truncate" th:title="${book.price}" th:text="${book.price}">Price</div>
+                </td>
+                <td data-label="ISBN">
+                    <div class="slds-truncate" title="Cloudhub">
+                        <a th:href="@{'https://www.zvab.com/products/isbn/'+ ${book.ISBN}}" tabindex="-1" th:title="${book.ISBN}" th:text="${book.ISBN}">ISBN</a>
+                    </div>
+                </td>
+
             </tr>
         </tbody>
     </table>
     <div>
-        <a class="btn btn-default" href="/book/add">Add a Book</a>
+        <a class="btn btn-default" href="/books/add">Add a Book</a>
     </div>
 </div>
 
-<script src="webjars/jquery/3.3.1/jquery.min.js"></script>
+<script src="/webjars/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
