--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -11,7 +11,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 
-		<form id="registration" class="form-signin">
+		<form id="registration" action="register" method="POST" class="form-signin">
 			<div class="row">
 				<div class="col-md-12">
 					<img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
@@ -19,19 +19,19 @@
 			</div>
 			<div class="row"> 
 				<div class="col-md-6">
-					<input type="text" class="form-control" placeholder="Username" id="username" maxlength="16">
+					<input name="username" type="text" class="form-control" placeholder="Username" id="username" maxlength="16">
 				</div>
 				<div class="col-md-6">
-					<input type="text" class="form-control" placeholder="Password" id="password" maxlength="32" minlenght="8">
+					<input name="password" type="text" class="form-control" placeholder="Password" id="password" maxlength="32" minlenght="8">
 				</div>
 				<div class="col-md-6">
-					<input type="text" class="form-control" placeholder="Firstname" id="firstname" maxlength="10">
+					<input name="firstName" type="text" class="form-control" placeholder="Firstname" id="firstname" maxlength="10">
 				</div>
 				<div class="col-md-6">
-					<input type="text" class="form-control" placeholder="Lastname" id="lastname" maxlength="10">
+					<input name="lastName" type="text" class="form-control" placeholder="Lastname" id="lastname" maxlength="10">
 				</div>
 				<div class="col-md-6">
-					<input type="text" class="form-control" placeholder="Gender" id="gender" list="Gender" maxlenght="8">
+					<input name="gender" type="text" class="form-control" placeholder="Gender" id="gender" list="Gender" maxlenght="8">
 					<datalist id="Gender">
 						<option value="female">
 						<option value="male">
@@ -39,7 +39,7 @@
 					</datalist>
 				</div>
 				<div class="col-md-6">
-			    	<input type="text" class="form-control" placeholder="Year of birth" id="year_of_birth">
+			    	<input name="yearOfBirth" type="text" class="form-control" placeholder="Year of birth" id="year_of_birth">
 
 				</div>
 			</div>
