--- a/src/main/resources/templates/design.css
+++ b/src/main/resources/templates/design.css
@@ -1,14 +1,11 @@
-html, body {height:100%;}
-
-body {background-color:#F5F5F5;
+body {
+    background-color:#F5F5F5;
 	align-items: center;
 	padding-top:20px;
 	padding-bottom: 40px;
 	display: flex;
 }
-.form-signin {
-    width: 150%;
-    max-width: 380px;
-    padding: 15px;
-    margin: 0 auto;
+
+.form-control {
+    margin-bottom: 15px;
 }
