--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,54 +1,52 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<title>SimpleMessage</title>
-	<link rel="stylesheet" href="design.css"/>
-</head>
-<body class="text-center">
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-
-		<form id="registration" class="form-signin">
-			<div class="row">
+	<head>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<title>SimpleMessage - Registration</title>
+		<link rel="stylesheet" href="design.css"/>
+	</head>
+	<body class="text-center">
+		<div class="row mx-auto">
+			<form id="registration" class="form-registration" action="/user/register" method="post">
 				<div class="col-md-12">
-					<img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+					<img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72" >
 				</div>
-			</div>
-			<div class="row"> 
-				<div class="col-md-6">
-					<input type="text" class="form-control" placeholder="Username" id="username" maxlength="16">
+				<div class="col-md-3">
 				</div>
 				<div class="col-md-6">
-					<input type="text" class="form-control" placeholder="Password" id="password" maxlength="32" minlenght="8">
-				</div>
-				<div class="col-md-6">
-					<input type="text" class="form-control" placeholder="Firstname" id="firstname" maxlength="10">
-				</div>
-				<div class="col-md-6">
-					<input type="text" class="form-control" placeholder="Lastname" id="lastname" maxlength="10">
-				</div>
-				<div class="col-md-6">
-					<input type="text" class="form-control" placeholder="Gender" id="gender" list="Gender" maxlenght="8">
-					<datalist id="Gender">
-						<option value="female">
-						<option value="male">
-						<option value="divers"></option>
-					</datalist>
-				</div>
-				<div class="col-md-6">
-			    	<input type="text" class="form-control" placeholder="Year of birth" id="year_of_birth">
 
+					<div class="row">
+						<div class="col-md-6">
+							<input type="text" class="form-control" name="username" placeholder="Username" id="username" maxlength="16">
+						</div>
+						<div class="col-md-6">
+							<input type="text" class="form-control" name="password" placeholder="Password" id="password" maxlength="32" minlenght="8">
+						</div>
+						<div class="col-md-6">
+							<input type="text" class="form-control" name="firstName" placeholder="Firstname" id="firstname" maxlength="10">
+						</div>
+						<div class="col-md-6">
+							<input type="text" class="form-control" name="lastName" placeholder="Lastname" id="lastname" maxlength="10">
+						</div>
+						<div class="col-md-6">
+							<input type="text" class="form-control" name="gender" placeholder="Gender" id="gender" list="Gender" maxlenght="8">
+
+						</div>
+						<div class="col-md-6">
+							<input type="text" class="form-control" name="yearOfBirth" placeholder="Year of birth" id="year_of_birth">
+						</div>
+					</div>
 				</div>
-			</div>
-			<div class="row">
+				<div class="col-md-3">
+				</div>
 				<div class="col-md-12">
 					<button type="submit" class="btn btn-primary">Register</button>
 				</div>
-			</div>
-		  
-		</form>
-</body>
+			</form>
+		</div>
+
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	</body>
 </html>
