--- a/src/main/resources/templates/design.css
+++ b/src/main/resources/templates/design.css
@@ -1,11 +1,14 @@
-body {
-    background-color:#F5F5F5;
-	align-items: center;
-	padding-top:20px;
-	padding-bottom: 40px;
-	display: flex;
+html, body {
+	height: 100%;
 }
 
-.form-control {
-    margin-bottom: 15px;
+body {
+  background-color: #f5f5f5 !important;
+}
+
+form {
+	padding-top: 1rem;
+}
+.form-group {
+
 }
