--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,55 +2,42 @@
 <html>
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<title>SimpleMessage - Login</title>
+	<title>SimpleMessage - Registration</title>
 	<link rel="stylesheet" href="design.css"/>
 </head>
 <body class="text-center">
-<div class="row mx-auto">
-	<form id="registration" class="form-registration">
-		<div class="col-md-12">
-			<img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72" >
-		</div>
-		<div class="col-md-3">
-		</div>
-		<div class="col-md-6">
-				<div class="row">
-					<div class="col-md-6">
-						<input type="text" class="form-control" placeholder="Username" id="nickname" maxlength="16">
-					</div>
-					<div class="col-md-6">
-						<input type="text" class="form-control" placeholder="Password" id="passwort" maxlength="32" minlenght="8">
-					</div>
-					<div class="col-md-6">
-						<input type="text" class="form-control" placeholder="Firstname" id="firstname" maxlength="10">
-					</div>
-					<div class="col-md-6">
-						<input type="text" class="form-control" placeholder="Lastname" id="lastname" maxlength="10">
-					</div>
-					<div class="col-md-6">
-						<input type="text" class="form-control" placeholder="Gender" id="gender" list="Gender" maxlenght="8">
-						<datalist id="Gender">
-							<option value="female"></option>
-							<option value="male"></option>
-							<option value="divers"></option>
-						</datalist>
-					</div>
-					<div class="col-md-6">
-						<input type="text" class="form-control" placeholder="Year of birth" id="year_of_birth">
+
+
+<div class="container py-5 h-100" >
+	<div class="row h-100">
+		<div class="col-md-4 mx-auto my-auto">
+			<img src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72" >
+			<form>
+				<div class="form-group row">
+					<div class="col-sm-12">
+						<div class="input-group">
+							<div class="input-group-prepend">
+							</div>
+							<input type="text" class="form-control" id="inputUsername" placeholder="Username" name="username">
+						</div>
 					</div>
 				</div>
-			form>
+				<div class="form-group row">
+					<div class="col-sm-12">
+						<input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password">
+					</div>
+				</div>
+				<button type="submit" class="btn btn-primary px-4">Login</button>
+				or
+				<a href="registration.html">Register</a>
+			</form>
 		</div>
-		<div class="col-md-3">
-		</div>
-		<div class="col-md-12">
-			<button type="submit" class="btn btn-primary">Register</button>
-		</div>
-	</form>
+	</div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
