--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -48,7 +48,7 @@
 						</div>
 
 					</div>
-					<button type="button" class="btn btn-primary px-4">Register</button>
+					<button type="submit" class="btn btn-primary px-4">Register</button>
 				</form>
 			</div>
 		</div>
