--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<title>SimpleMessage - Registration</title>
-	<link rel="stylesheet" href="/design.css"/>
-</head>
-<body class="text-center">
 
+    <head>
+        <title>SimpleMessage - Login</title>
+        <link rel="stylesheet" href="/design.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" integrity="sha256-BtbhCIbtfeVWGsqxk1vOHEYXS6qcvQvLMZqjtpWUEx8=" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    </head>
 
-<div class="container py-5 h-100" >
-	<div class="row h-100">
-		<div class="col-md-4 mx-auto my-auto">
-			<img src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72" >
-			<form action="login" method="post">
-				<div class="form-group row">
-					<div class="col-sm-12">
-						<div class="input-group">
-							<div class="input-group-prepend">
-							</div>
-							<input type="text" class="form-control" id="inputUsername" placeholder="Username" name="username">
-						</div>
-					</div>
-				</div>
-				<div class="form-group row">
-					<div class="col-sm-12">
-						<input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password">
-					</div>
-				</div>
-				<button type="submit" class="btn btn-primary px-4">Login</button>
-				or
-				<a href="registration.html">Register</a>
-			</form>
-		</div>
-	</div>
-</div>
+    <body class="text-center">
+        <div class="container py-5 h-100" >
+            <div class="row h-100">
+                <div class="col-md-4 mx-auto my-auto">
+                    <img src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72" >
+                    <form action="login" method="post">
+                        <div class="form-group row">
+                            <div class="col-sm-12">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fas fa-user-alt"></i></span>
+                                    </div>
+                                    <input type="text" class="form-control" id="inputUsername" placeholder="Username" name="username">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-sm-12">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fas fa-key"></i></span>
+                                    </div>
+                                    <input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password">
+                                </div>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary px-4">Login</button>
+                        or
+                        <a href="registration.html">Register</a>
+                    </form>
+                </div>
+            </div>
+        </div>
 
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    </body>
 </html>
