--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -14,7 +14,7 @@
                 <div class="col-md-4">
                     <div class="slds-hint-parent" th:each="user : ${users}">
                         <span th:text="${user.username}"></span>
-                        <span th:text="${user.firstname}"></span>
+                        <span th:text="${user.firstName}"></span>
                     </div>
                 </div>
             </div>
