--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -13,7 +13,7 @@
             <div class="row h-100">
                 <div class="col-md-8 mx-auto my-auto">
                     <img class="md-8" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72" >
-                    <form action="register" method="post">
+                    <form action="user/register" method="post">
                         <div class="form-group row">
                             <div class="col-sm-6">
                                 <input type="text" class="form-control" id="inputUsername" placeholder="Username" name="username">
