--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -3,19 +3,102 @@
 
     <head>
         <title>SimpleMessage - Message</title>
-        <link rel="stylesheet" href="/design.css"/>
+        <link rel="stylesheet" href="design.message.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" integrity="sha256-BtbhCIbtfeVWGsqxk1vOHEYXS6qcvQvLMZqjtpWUEx8=" crossorigin="anonymous" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
 
     <body class="text-center">
         <div class="container py-5 h-100" >
-            <div class="row h-100" id="userList">
+            <div class="row" id="userList">
+                <div class="col-md-8">
+                    <ul class="list-group mb-3">
+                        <li class="list-group-item" id="userlist">
+                            <div>
+                                <h6 class="headline">Test 123</h6> <small>Max Mustermann (16)m</small>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <p>This is a message from Sender X...</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-8"></div>
+                                <div class="col-md-8"></div>
+                                <div class="col-md-4">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <p>Hi X this is another message ...</p>
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <p>...</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-8"></div>
+                                <div class="col-md-8"></div>
+                                <div class="col-md-4">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <p>...</p>
+
+                                        </div>
+                                    </div>
+                                </div>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between lh-condensed">
+                            <div class="col-md-10">
+                                <input type="text" class="form-control" placeholder="type something...">
+                            </div>
+                            <button type="submit" class="btn btn-primary px-4 ">send</button>
+                        </li>
+                    </ul>
+                </div>
                 <div class="col-md-4">
-                    <div class="slds-hint-parent" th:each="user : ${users}">
-                        <span th:text="${user.username}"></span>
-                        <span th:text="${user.firstname}"></span>
-                    </div>
+                    <ul class="list-group mb-3">
+                        <li class="list-group-item" id="userlist">
+                            <div>
+                                <h6 class="headline" >Userlist</h6> <small>Write with...</small>
+                            </div>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between lh-condensed">
+                            <div>
+                                <h6 class="">@Test123, (16)m</h6>
+                                <small>Max Mustermann</small>
+                            </div>
+                            <div class="text-muted btn btn-light" id="">4</div>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between lh-condensed">
+                            <div>
+                                <h6 class="">@Nickname, (...)f</h6>
+                                <small>Firstname Lastname</small>
+                            </div>
+                            <div class="text-muted btn btn-light">5</div>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between lh-condensed">
+                            <div>
+                                <h6 class="">@Nickname, (...)d</h6>
+                                <small>Firstname Lastname</small>
+                            </div>
+                            <div class="text-muted btn btn-light">2</div>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between lh-condensed">
+                            <div>
+                                <h6 class="">...</h6>
+                                <small>...</small>
+                            </div>
+                            <div class="text-muted btn btn-light">3</div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
