--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -12,6 +12,7 @@
         <div class="container py-5 h-100" >
             <div class="row h-100" id="userList">
                 <div class="col-md-4">
+                    <div th:text="${username}"></div>
                     <div class="slds-hint-parent" th:each="user : ${users}">
                         <span th:text="${user.username}"></span>
                         <span th:text="${user.firstName}"></span>
