--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html xmlns:th="http://www.thymeleaf.org">
     <head>
         <title>SimpleMessage - Login</title>
         <link rel="stylesheet" href="/design.css"/>
