--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
         <div class="container py-5 h-100" >
             <div class="row h-100">
                 <div class="col-md-4 mx-auto my-auto">
-                    <img src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72" >
+                    <img src="logo.png" alt="" width="72" height="72" >
                     <form action="user/login" method="post">
                         <div class="form-group row">
                             <div class="col-sm-12">
