--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -12,7 +12,7 @@
         <div class="container py-5 h-100" >
             <div class="row h-100">
                 <div class="col-md-8 mx-auto my-auto">
-                    <img class="md-8" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72" >
+                    <img class="md-8" src="logo.png" alt="" width="72" height="72" >
                     <form action="user/register" method="post">
                         <div class="form-group row">
                             <div class="col-sm-6">
